# NPU_OJ

./: CMakeLists.txt  Makefile  README.md
conf/: noj.conf
include/: common.h  config.h  daemon.h  dataitem.h  db.h  debug.h  judge.h  lang.h  threadpool.h
scripts/: compile_c_debug.sh  compile_c_release.sh  compile_cpp_debug.sh  compile_cpp_release.sh  download_from_ftp.sh  download_from_sftp.sh  fetch_testcase_file.sh
src/: CMakeLists.txt  Makefile  check.cpp  compile.cpp  config.cpp  daemon.cpp  dataitem.cpp  db.cpp  debug.cpp  judge.cpp  lang.cpp  launch.cpp  main.cpp  network.cpp  test.cpp  threadpool.cpp
